--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ dmypy.json
 # Pyre type checker
 .pyre/
 __pycache__/
+# Ignore master key for decrypting credentials and more.
+/config/master.key
