--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,13 @@ yarn-debug.log*
 /storage/*
 !/storage/.keep
 .vscode
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
